WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205811
[LFC] UsedHorizontalValues::Constraints should not take Display::Box
https://bugs.webkit.org/show_bug.cgi?id=205811
Summary
[LFC] UsedHorizontalValues::Constraints should not take Display::Box
alan
Reported
2020-01-06 10:40:50 PST
and not the Display::Box.
Attachments
Patch
(14.58 KB, patch)
2020-01-06 10:45 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(19.12 KB, patch)
2020-01-06 16:16 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-06 10:41:10 PST
<
rdar://problem/58346356
>
alan
Comment 2
2020-01-06 10:45:19 PST
Created
attachment 386861
[details]
Patch
alan
Comment 3
2020-01-06 16:16:53 PST
Created
attachment 386909
[details]
Patch
WebKit Commit Bot
Comment 4
2020-01-06 17:10:36 PST
Comment on
attachment 386909
[details]
Patch Clearing flags on attachment: 386909 Committed
r254102
: <
https://trac.webkit.org/changeset/254102
>
WebKit Commit Bot
Comment 5
2020-01-06 17:10:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug