[LFC] UsedHorizontalValues::Constraints should not take Display::Box https://bugs.webkit.org/show_bug.cgi?id=205811 <rdar://problem/58346356>

Reviewed by Antti Koivisto.

Passing in only the actual rect values (content/padding box left/width) to UsedHorizontalValues::Constraints makes the
constraint logic look clear.

* layout/FormattingContext.cpp:
(WebCore::Layout::outOfFlowHorizontalConstraints):
(WebCore::Layout::FormattingContext::computeBorderAndPadding):
* layout/FormattingContextQuirks.cpp:
(WebCore::Layout::FormattingContext::Quirks::heightValueOfNearestContainingBlockWithFixedHeight):
* layout/LayoutUnits.cpp:
(WebCore::Layout::UsedHorizontalValues::Constraints::Constraints):
* layout/LayoutUnits.h:
* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::placeInFlowPositionedChildren):
(WebCore::Layout::BlockFormattingContext::computeStaticHorizontalPosition):
(WebCore::Layout::BlockFormattingContext::computeEstimatedVerticalPosition):
(WebCore::Layout::BlockFormattingContext::computeHeightAndMargin):
* layout/blockformatting/BlockFormattingContextQuirks.cpp:
(WebCore::Layout::BlockFormattingContext::Quirks::stretchedInFlowHeight):
* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::positiveNegativeValues const):
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):


Canonical link: https://commits.webkit.org/218970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254102 268f45cc-cd09-0410-ab3c-d52691b4dbfc