Source/WebCore/layout/LayoutUnits.h
@@ -157,7 +157,6 @@ struct VerticalGeometry {
 
 struct UsedHorizontalValues {
     struct Constraints {
-        explicit Constraints(const Display::Box& containingBlockGeometry);
         explicit Constraints(LayoutUnit contentBoxLeft, LayoutUnit horizontalConstraint)
             : contentBoxLeft(contentBoxLeft)
             , width(horizontalConstraint)
